--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "start-android": "node node_modules/react-native/local-cli/cli.js run-android"
   },
   "dependencies": {
     "react": "16.8.6",
